--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ url: http://scotentSD.github.io
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "https://scotentsd.github.io/sep"
+baseurl: "/sep"
 
 
 excerpt_separator: "<!--more-->"
