--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ footer-links:
   instagram:
   twitter:
 
+
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
 url: http://scotentSD.github.io
@@ -33,7 +34,7 @@ url: http://scotentSD.github.io
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/sep"
+baseurl: /sep
 
 
 excerpt_separator: "<!--more-->"
