--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,7 @@ avatar: /images/saltire.png
 
 #
 # Flags below are optional
-#
-
-
-# Includes an icon in the footer for each username you enter
+## Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
   email:
