--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ url: http://scotentsd.github.io
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/sep"
+baseurl: /sep
 
 excerpt_separator: "<!--more-->"
 
