--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: http://scotentSD.github.io
+url: https://scotentSD.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
@@ -89,5 +89,5 @@ exclude:
   - Gemfile
   - Gemfile.lock
   - LICENSE
-  - README.MD
+  - README.md
   - CNAME
