--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ url: https://scotentSD.github.io
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: "/sep"
-
+title: Single Entry Point
 
 excerpt_separator: "<!--more-->"
 
