--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: SEP
+name: Find Business Support
 
 # Short bio or description (displayed in the header)
 description: Designing in the open
@@ -51,7 +51,7 @@ url: https://scotentSD.github.io
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: "/sep"
-title: Single Entry Point
+title: Find Business Support
 
 excerpt_separator: "<!--more-->"
 
