--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ theme: jekyll-theme-slate
 
 
 prose:
-  rooturl: ''
+  rooturl: '/'
   siteurl: 'http://scotentSD.github.io/opportunity/'
   # relativeLinks: 'http://scotentSD.github.io/opportunity/links.jsonp'
   media: 'media'
