--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 
 prose:
-  rooturl: '/'
+  rooturl: '_posts'
   siteurl: 'http://scotentSD.github.io/opportunity/'
   # relativeLinks: 'http://scotentSD.github.io/opportunity/links.jsonp'
   media: 'media'
