--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 
 
 prose:
-  rooturl: '_posts'
+  # rooturl: '_posts'
   siteurl: 'http://scotentSD.github.io/opportunity/'
-  # relativeLinks: 'http://scotentSD.github.io/opportunity/links.jsonp'
+  relativeLinks: 'http://scotentSD.github.io/sep/links.jsonp'
   media: 'media'
   metadata:
     mktest:
