--- a/_config.yml
+++ b/_config.yml
@@ -3,27 +3,23 @@
 #
 
 
-prose: 
- rooturl: '_posts'
- siteurl: 'http://scotentSD.github.io/opportunity/'
- relativeLinks: 'http://scotentSD.github.io/sep/links.jsonp'
- media: 'media'
- metadata:
+prose:
+  rooturl: ''
+  siteurl: 'http://scotentSD.github.io/sep/'
+  relativeLinks: 'http://scotentSD.github.io/sep/links.jsonp'
+  media: 'files'
+  ignore: [links.jsonp,  _config.yml,  media,  assets,  _sass,  _layouts, _includes, _flist, images, mktest, data.json, data2.json, data2.jsonp, timeline.css, links_copy.jsonp]
+  metadata:
    _posts:
     - name: "layout"
       field:
         element: "hidden"
         value: "post"
-    - name: "title"
-      field:
-        element: "text"
-        label: "Title"
-        value: ""
     - name: "type"
       field:
-       	element: "select"
-       	label: "Select Type"
-        placeholder: "Choose Type"
+        element: "select"
+        label: "Type"
+        placeholder: ""
         options:
           - name: " lab "
             value: "lab"
@@ -38,16 +34,16 @@ prose:
     - name: "phase"
       field:
         element: "select"
-        label: "Select phase"
-       	 placeholder: "Choose phase"
+        label: "Phase"
+        placeholder: ""
         options:
-         - name: " discovery "
+         - name: "discovery"
            value: "discovery"
-         - name: " alpha "
+         - name: "alpha"
            value: "alpha"
-         - name: " beta "
+         - name: "beta"
            value: "beta"
-         - name: " live "
+         - name: "live"
            value: "live"
     - name: "initials"
       field:
@@ -57,12 +53,19 @@ prose:
     - name: "display_date"
       field:
         element: "text"
-        label: "Display Date"
+        label: "Display_Date"
+        value: ""
+    - name: "tltitle"
+      field:
+        element: "text"
+        label: "Title"
         value: ""
     - name: "return_url"
       field:
         element: "hidden"
         value: "https://scotentsd.github.io/sep/timeline/"
+
+
 
 
 
