--- a/_config.yml
+++ b/_config.yml
@@ -55,10 +55,15 @@ prose:
         element: "text"
         label: "Display_Date"
         value: ""
+    - name: "tltitle"
+      field:
+        element: "text"
+        label: "Title"
+        value: ""
     - name: "title"
       field:
         element: "text"
-        label: "Title_V2"
+        label: "Title_v3"
         value: ""
     - name: "return_url"
       field:
