--- a/_config.yml
+++ b/_config.yml
@@ -118,7 +118,7 @@ url: https://scotentSD.github.io
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/sep"
+baseurl: "/fbs"
 title: Find Business Support
 
 excerpt_separator: "<!--more-->"
@@ -148,7 +148,7 @@ sass:
   style: :expanded # You might prefer to minify using :compressed
 
 # Use the following plug-ins
-gems:
+plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
 
