--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ url: https://scotentSD.github.io
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/fbs"
+baseurl: "/sep"
 title: Find Business Support
 
 excerpt_separator: "<!--more-->"
